--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         color-scheme: dark;
     }
     canvas {
-        border: 1px solid white;
+        /* border: 1px solid white; */
+        background-color: black;
     }
 </style>
