--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
     </head>
     <body>
         <canvas id="output"></canvas>
+        <div>
+            <ul>
+                <li><button onclick="changeModel('planet')">Planet</button></li>
+                <li><button onclick="changeModel('wave')">Wave</button></li>
+            </ul>
+        </div>
     </body>
 </html>
 <script type="module" src="dist/main.js"></script>
+<script>
+function changeModel(name) {
+    sessionStorage.setItem("physicalsimu_model",name);
+    location.reload();
+}
+</script>
 <style>
     :root {
         color-scheme: dark;
